# proc-macro-workshop-solutions

bitfield/impl/: Cargo.toml
bitfield/impl/src/: lib.rs
bitfield/src/: lib.rs
builder/: Cargo.toml
builder/src/: lib.rs
debug/: Cargo.toml
debug/src/: lib.rs
debug/tests/: 02-impl-debug.rs
seq/: Cargo.toml
seq/src/: lib.rs
seq/tests/: 05-repeat-section.rs
sorted/: Cargo.toml
sorted/src/: lib.rs
sorted/tests/: 01-parse-enum.rs  03-out-of-order.rs  04-variants-with-data.rs  08-underscore.rs
