[package]
name = "derive_debug"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
syn = { version = "2.0.38", features = ["full", "extra-traits"]}
proc-macro2 = { version = "1.0.69" }
quote = { version = "1.0.33" }
